# cc-codex-proxy

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  changelog.md
.github/: PULL_REQUEST_TEMPLATE.md  release.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  release.yml
Casks/: cc-codex-proxy-app.rb
Formula/: cc-codex-proxy.rb
crates/cc-codex-proxy/: Cargo.toml
crates/cc-codex-proxy/src/: main.rs
crates/cc-codex-proxy/tests/: claude_launch.rs
crates/proxy-core/: Cargo.toml
crates/proxy-core/src/: canonical.rs  config.rs  custom_openai.rs  error.rs  http_client.rs  lib.rs  logging.rs  model.rs  routing.rs
crates/proxy-core/src/anthropic/: mod.rs  response.rs  schema.rs  tokens.rs
crates/proxy-core/src/auth/: manager.rs  mod.rs  pkce.rs  store.rs
crates/proxy-core/src/claude/: mod.rs
crates/proxy-core/src/codex/: client.rs  count_tokens.rs  mod.rs  stream.rs  translate.rs
crates/proxy-core/src/deepseek/: mod.rs
crates/proxy-core/src/server/: mod.rs
crates/proxy-core/tests/: deepseek_live.rs  openai_live.rs  server_mock.rs
docs/: ARCHITECTURE.md  RELEASING.md
macos/CCCodexProxy/: Info.plist  Package.swift
macos/CCCodexProxy/Sources/CCCodexProxy/: CCCodexProxyApp.swift  ContentView.swift  LogViewerView.swift  ProxyAppModel.swift  ProxyLogEntry.swift  StatusItemController.swift
macos/CCCodexProxy/Tests/CCCodexProxyTests/: ProxyLogEntryTests.swift
packaging/homebrew/: README.md  cc-codex-proxy-app.rb  cc-codex-proxy.rb
plans/: 001-exclusive-async-actions.md  002-accessible-scoped-motion.md  003-adaptive-layout-typography.md  004-colocated-failure-recovery.md  005-accessible-materials-contrast.md  006-accessibility-announcements.md  007-instant-preview-tabs.md  008-semantic-design-tokens.md  009-asymmetric-button-response.md  README.md
scripts/: build-app.sh  update-homebrew-packaging.sh  verify-release-packaging.sh
