[package]
name = "cc-codex-proxy"
version = "0.3.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "cc-codex-proxy"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
proxy-core = { path = "../proxy-core" }
reqwest.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile.workspace = true
